--- a/src/components/moviesList/MoviesByGenreList/style.module.css
+++ b/src/components/moviesList/MoviesByGenreList/style.module.css
@@ -2,27 +2,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     justify-items: center;
-    row-gap: 55px;
-    column-gap: 20px;
-    margin: 15px;
+    row-gap: 35px;
+    column-gap: 5px;
+    margin: 30px auto;
+    max-width: 1160px;
 }
-/*@media screen and (max-width: 1625px) {*/
-/*    .gridContainer{*/
-/*        gap: 15px;*/
-/*    }*/
-/*}*/
-/*@media screen and (max-width: 1585px) {*/
-/*    .gridContainer{*/
-/*        gap: 15px;*/
-/*    }*/
-/*}*/
-/*@media screen and (max-width: 1254px) {*/
-/*    .gridContainer{*/
-/*        gap: 15px;*/
-/*    }*/
-/*}*/
-/*@media screen and (max-width: 1224px) {*/
-/*    .gridContainer{*/
-/*        gap: 14px;*/
-/*    }*/
-/*}*/
